# LeopardWebProject

./: ADMIN.cpp  CMakeLists.txt  Comments  Crowell_intigration  README.md  Student.cpp  StudentCode.cpp  StudentCode.h  assignment3.db  main.cpp  programmer.db  sqlite3.exp  sqlite3.lib
Admin/: ADMIN.h  main.cpp
AdminAndInstructor/Implementation2/: INSTRUCTOR.cpp  INSTRUCTOR.h  Implementation2.sln  Implementation2.vcxproj  Implementation2.vcxproj.filters  main.cpp
AdminAndInstructor/Implementation2/x64/Debug/: Implementation2.exe.recipe  Implementation2.ilk  Implementation2.vcxproj.FileListAbsolute.txt  vc143.idb
AdminAndInstructor/Implementation2/x64/Debug/Implementation2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Implementation2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  (+1 more)
Assignment3/: Assignment3.sln  Assignment3.vcxproj  Assignment3.vcxproj.filters  assignment3.db  main.cpp
Assignment3/x64/Debug/: Assignment3.exe.recipe  Assignment3.ilk  Assignment3.vcxproj.FileListAbsolute.txt  vc143.idb
Assignment3/x64/Debug/Assignment3.tlog/: Assignment3.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Code/: CMakeLists.txt  cpp_sqlite_programmers.cpp  main.cpp
Database/: assignment3.db
Finished_Main/: ADMIN.cpp  ADMIN.h  CMakeLists.txt  INSTRUCTOR.cpp  INSTRUCTOR.h  STUDENT.cpp  USER.cpp  assignment3.db  main.cpp
Lab1/: Lab1.sln
Lab1/Lab1/: Lab1.cpp  Lab1.vcxproj
Lab1/Lab1/x64/Debug/: Lab1.exe.recipe  Lab1.ilk  vc143.idb
Lab1/PythonApplication1/: PythonApplication1.py  PythonApplication1.pyproj
LoginCode/Login/: CMakeLists.txt  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h
test/: test_ADMIN.cpp  test_main.cpp
test_v1/: ADMIN.cpp  ADMIN.h  CMakeLists.txt  STUDENT.h  USER.h
v3_main/: ADMIN.cpp  ADMIN.h  CMakeLists.txt  INSTRUCTOR.cpp  INSTRUCTOR.h  STUDENT.cpp  STUDENT.h  assignment3.db  main.cpp
x64/Debug/: Assignment3.ilk
x64/Debug/Assignment3.tlog/: Assignment3.lastbuildstate  CL.command.1.tlog  CL.write.1.tlog
(+9 files in other folders)
